--- a/src/tool/N3CE/N3CE.vcxproj
+++ b/src/tool/N3CE/N3CE.vcxproj
@@ -69,7 +69,7 @@
       <ObjectFileName>.\Debug\</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\engine;$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -108,7 +108,7 @@
       <PrecompiledHeaderOutputFile>.\Release\N3CE.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
       <ProgramDataBaseFileName>.\Release\</ProgramDataBaseFileName>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\engine;$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -133,49 +133,49 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Common Control\PropertyList.cpp" />
-    <ClCompile Include="..\N3Base\BitMapFile.cpp" />
-    <ClCompile Include="..\N3Base\N3AlphaPrimitiveManager.cpp" />
-    <ClCompile Include="..\N3Base\N3AnimControl.cpp" />
-    <ClCompile Include="..\N3Base\N3AnimKey.cpp" />
-    <ClCompile Include="..\N3Base\N3Base.cpp" />
-    <ClCompile Include="..\N3Base\N3BaseFileAccess.cpp" />
-    <ClCompile Include="..\N3Base\N3Board.cpp" />
-    <ClCompile Include="..\N3Base\N3Camera.cpp" />
-    <ClCompile Include="..\N3Base\N3Chr.cpp" />
-    <ClCompile Include="..\N3Base\N3Eng.cpp" />
-    <ClCompile Include="..\N3Base\N3EngTool.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXBundle.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXPartBase.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXPartBillBoard.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXPartBottomBoard.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXParticle.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXPartMesh.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXPartParticles.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXPlug.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXPMesh.cpp" />
-    <ClCompile Include="..\N3Base\N3FXPMeshInstance.cpp" />
-    <ClCompile Include="..\N3BASE\N3FXShape.cpp" />
-    <ClCompile Include="..\N3Base\N3IMesh.cpp" />
-    <ClCompile Include="..\N3Base\N3Joint.cpp" />
-    <ClCompile Include="..\N3Base\N3Light.cpp" />
-    <ClCompile Include="..\N3Base\N3Mesh.cpp" />
-    <ClCompile Include="..\N3Base\N3PMesh.cpp" />
-    <ClCompile Include="..\N3Base\N3PMeshCreate.cpp" />
-    <ClCompile Include="..\N3Base\N3PMeshInstance.cpp" />
-    <ClCompile Include="..\N3Base\N3Scene.cpp" />
-    <ClCompile Include="..\N3Base\N3Shape.cpp" />
-    <ClCompile Include="..\N3Base\N3ShapeExtra.cpp" />
-    <ClCompile Include="..\N3Base\N3Skin.cpp" />
-    <ClCompile Include="..\N3BASE\N3SndMgr.cpp" />
-    <ClCompile Include="..\N3BASE\N3SndObj.cpp" />
-    <ClCompile Include="..\N3BASE\N3SndObjStream.cpp" />
-    <ClCompile Include="..\N3Base\N3Texture.cpp" />
-    <ClCompile Include="..\N3Base\N3Transform.cpp" />
-    <ClCompile Include="..\N3Base\N3TransformCollision.cpp" />
-    <ClCompile Include="..\N3Base\N3VMesh.cpp" />
-    <ClCompile Include="..\N3Base\Pick.cpp" />
-    <ClCompile Include="..\N3BASE\WaveFile.cpp" />
+    <ClCompile Include="..\Widget\PropertyList.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3AnimControl.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3AnimKey.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Base.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3BaseFileAccess.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Board.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Camera.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Chr.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Eng.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3EngTool.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXBundle.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPartBase.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPartBillBoard.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPartBottomBoard.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXParticle.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPartMesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPartParticles.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPlug.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPMesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXPMeshInstance.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3FXShape.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3IMesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Joint.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Light.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Mesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3PMesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3PMeshCreate.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3PMeshInstance.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Scene.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Shape.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3ShapeExtra.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Skin.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3SndMgr.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3SndObj.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3SndObjStream.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Texture.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Transform.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3TransformCollision.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3VMesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\Pick.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\WaveFile.cpp" />
     <ClCompile Include="FormViewAnimation.cpp" />
     <ClCompile Include="FormViewProperty.cpp" />
     <ClCompile Include="FormViewTool.cpp" />
@@ -192,55 +192,55 @@
     <ResourceCompile Include="N3CE.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Common Control\PropertyList.h" />
-    <ClInclude Include="..\N3Base\BitMapFile.h" />
-    <ClInclude Include="..\N3Base\My_3DStruct.h" />
-    <ClInclude Include="..\N3Base\N3AlphaPrimitiveManager.h" />
-    <ClInclude Include="..\N3Base\N3AnimControl.h" />
-    <ClInclude Include="..\N3Base\N3AnimKey.h" />
-    <ClInclude Include="..\N3Base\N3Base.h" />
-    <ClInclude Include="..\N3Base\N3BaseFileAccess.h" />
-    <ClInclude Include="..\N3Base\N3Board.h" />
-    <ClInclude Include="..\N3Base\N3Camera.h" />
-    <ClInclude Include="..\N3Base\N3Chr.h" />
-    <ClInclude Include="..\N3BASE\N3Cloak.h" />
-    <ClInclude Include="..\N3Base\N3Eng.h" />
-    <ClInclude Include="..\N3Base\N3EngTool.h" />
-    <ClInclude Include="..\N3BASE\N3FXBundle.h" />
-    <ClInclude Include="..\N3BASE\N3FXPartBase.h" />
-    <ClInclude Include="..\N3BASE\N3FXPartBillBoard.h" />
-    <ClInclude Include="..\N3BASE\N3FXPartBottomBoard.h" />
-    <ClInclude Include="..\N3BASE\N3FXParticle.h" />
-    <ClInclude Include="..\N3BASE\N3FXPartMesh.h" />
-    <ClInclude Include="..\N3BASE\N3FXPartParticles.h" />
-    <ClInclude Include="..\N3BASE\N3FXPlug.h" />
-    <ClInclude Include="..\N3BASE\N3FXPMesh.h" />
-    <ClInclude Include="..\N3Base\N3FXPMeshInstance.h" />
-    <ClInclude Include="..\N3BASE\N3FXShape.h" />
-    <ClInclude Include="..\N3Base\N3IMesh.h" />
-    <ClInclude Include="..\N3Base\N3Joint.h" />
-    <ClInclude Include="..\N3Base\N3Light.h" />
-    <ClInclude Include="..\N3Base\N3Mesh.h" />
-    <ClInclude Include="..\N3Base\N3Mng.h" />
-    <ClInclude Include="..\N3Base\N3PMesh.h" />
-    <ClInclude Include="..\N3Base\N3PMeshCreate.h" />
-    <ClInclude Include="..\N3Base\N3PMeshInstance.h" />
-    <ClInclude Include="..\N3Base\N3Scene.h" />
-    <ClInclude Include="..\N3Base\N3Shape.h" />
-    <ClInclude Include="..\N3Base\N3ShapeExtra.h" />
-    <ClInclude Include="..\N3Base\N3Skin.h" />
-    <ClInclude Include="..\N3BASE\N3SndDef.h" />
-    <ClInclude Include="..\N3BASE\N3SndMgr.h" />
-    <ClInclude Include="..\N3BASE\N3SndObj.h" />
-    <ClInclude Include="..\N3BASE\N3SndObjStream.h" />
-    <ClInclude Include="..\N3BASE\N3TableBase.h" />
-    <ClInclude Include="..\N3Base\N3Texture.h" />
-    <ClInclude Include="..\N3Base\N3Transform.h" />
-    <ClInclude Include="..\N3Base\N3TransformCollision.h" />
-    <ClInclude Include="..\N3Base\N3VMesh.h" />
-    <ClInclude Include="..\N3Base\Pick.h" />
-    <ClInclude Include="..\N3Base\StdAfxBase.h" />
-    <ClInclude Include="..\N3BASE\WaveFile.h" />
+    <ClInclude Include="..\Widget\PropertyList.h" />
+    <ClInclude Include="..\..\engine\N3Base\BitMapFile.h" />
+    <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3AnimControl.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3AnimKey.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Base.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3BaseFileAccess.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Board.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Camera.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Chr.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Cloak.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Eng.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3EngTool.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXBundle.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartBase.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartBillBoard.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartBottomBoard.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXParticle.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartMesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartParticles.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPlug.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPMesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPMeshInstance.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXShape.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3IMesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Joint.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Light.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Mesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Mng.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3PMesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3PMeshCreate.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3PMeshInstance.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Scene.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Shape.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3ShapeExtra.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Skin.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndDef.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndMgr.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndObj.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndObjStream.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3TableBase.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Texture.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Transform.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3TransformCollision.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3VMesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\Pick.h" />
+    <ClInclude Include="..\..\engine\N3Base\StdAfxBase.h" />
+    <ClInclude Include="..\..\engine\N3Base\WaveFile.h" />
     <ClInclude Include="FormViewAnimation.h" />
     <ClInclude Include="FormViewProperty.h" />
     <ClInclude Include="FormViewTool.h" />
